--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,36 @@
-.app{
-    background-color: #fafafa;
-    height: 100vh;
+.app {
+  background-color: #fafafa;
+  height: 100%;
 }
 
-.app_headerImage{
-    object-fit: contain;
-    width: 10%;
-
+.app_headerImage {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  max-width: 120px;
+  margin: auto 140px;
 }
 
-.app_header{
-    padding: 10px;
-    border-bottom: 1px solid lightgray;
-    background-color: white;
+@media(max-width:900px){
+    .app_headerImage{
+    margin: auto 60px;
+    }
 }
 
-.app_headerContent{
+.app_header {
+  object-fit: contain;
+  background-color: white;
+  padding: 5px 20px;
+  
+  border-bottom: 1px solid lightgray;
+}
+
+.signup__form{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    max-width: 975px;
-    width: 100%;
+    flex-direction: column;
+    padding: 0px 10px 10px 10px;
+}
+
+.signup__form > .input{
+    margin-top:20px ;
 }
