--- a/src/Post.css
+++ b/src/Post.css
@@ -10,13 +10,14 @@
   max-width: 614px;
   background-color: white;
   border: 1px solid lightgray;
-  margin: 40px 140px;
+  margin-bottom: 20px;
 }
 @media (max-width: 900px) {
   .post {
-    margin: 30px auto;
+    /* margin: 30px auto; */
   }
 }
+
 
 .post__header > h5 {
   font-size: 14px;
@@ -35,5 +36,34 @@
 }
 
 .post__avatar {
+  margin-right: 10px;
+}
+
+
+.post__commentBox{
+  display: flex;
+  margin-top: 10px;
+  width: 100%;
+}
+
+.post__button{
+  flex: 0;
+  background-color: transparent;
+  color: lightskyblue;
+  border: none;
+  border-top: 1px solid lightgrey;
+}
+.post__input{
+  flex: 1;
+  border: none;
+  padding: 10px;
+  border-top: 1px solid lightgrey;
+}
+
+.post__comments{
+  padding: 10px 20px;
+}
+
+ b {
   margin-right: 10px;
 }
